modules/signoz/resources-otel-ingress/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz-otel-collector-route
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: signoz-otel-collector
          namespace: signoz
          port: 4318
          weight: 1
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /v1
      matches:
        - path:
            type: PathPrefix
            value: /telemetry/v1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz-ui-route
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: signoz-frontend
          namespace: signoz
          port: 3301
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
